--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,31 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="bar" id="gray">
+      <div class="blue-box"></div>
+    </div>
+    <div class="bar" id="text-area">
+      <p id="text-content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nulla error
+        laboriosam porro consectetur voluptate itaque aut quia ab numquam
+        repellendus eius deserunt tempora iusto eos, optio consequuntur
+        quisquam? Facere! Lorem, ipsum dolor sit amet consectetur adipisicing
+        elit. Laborum voluptatum consequuntur adipisci ipsam distinctio minus
+        molestiae commodi repudiandae! Natus et vel aperiam atque nisi corporis
+        eveniet alias sunt, tempora odio.
+      </p>
+    </div>
+    <div class="bar" id="blue"></div>
+    <div class="bar" id="teal"></div>
+    <div class="bar" id="green"></div>
+    <div class="bar" id="yellow"></div>
+  </body>
+</html>
