--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,18 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="main">
+      <div id="first"></div>
+      <div id="second"></div>
+      <div id="third"></div>
+    </div>
+  </body>
+</html>
