--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,27 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="solid-box">
+      <div id="purple-box"></div>
+      <div id="green-box"></div>
+      <div id="blue-circle"></div>
+    </div>
+    <div class="dotted-box">
+      <div id="yellow-box"></div>
+    </div>
+    <div class="light-box">
+      <div id="hello-box">
+        <p class="hello-text">HELLO</p>
+        <p class="hello-text">FRIENDS</p>
+      </div>
+    </div>
+  </body>
+</html>
